[package]
name = "seafile-fileshare"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { git = "https://github.com/ToxicMushroom/reqwest.git", default-features = false, features = ["cookies", "http2", "json", "gzip", "rustls-tls-native-roots", "multipart", "stream"] }
rustls = { version = "0.23.13", default-features = false, features = ["aws_lc_rs"] }
anyhow = { version = "1.0.89" }
serde = { version = "^1.0.210", features = ["derive"] }
serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
serde_json = "^1.0.128"

tokio = { version = "^1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-openssl = "^0.6.5"
tokio-util = "^0.7.12"

futures = "^0.3.30"
futures-concurrency = "^3.1.0"
futures-util = { version = "^0.3.30", features = ["sink"] }

bytes = "^1.7.2"
clap = { version = "^4.5.19", features = ["derive", "env"] }
clap_complete = "^4.5.29"
keyring = { version = "3.5.0", features = ["apple-native", "windows-native", "sync-secret-service"] }
rusqlite = "0.32.1"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"]}
log = "0.4.22"
notify-rust = "4.11.3"
wl-clipboard-rs = "0.9.1"
async-stream = "0.3.6"
